packages/mosaic/dropdown/dropdown.scss
$mc-dropdown-panel-border-width: 1px !default;
$mc-dropdown-panel-border-radius: 3px !default;

.mc-dropdown__item {
    display: flex;
    align-items: center;
    position: relative;
    box-sizing: border-box;

    width: 100%;

    border: 1px solid transparent;
    outline: none;

    padding: 5px 15px;

    text-align: left;
    white-space: nowrap;

    &:not([disabled]) {
        cursor: pointer;
    }

    .mc-dropdown__item-caption {
        margin-top: 4px;
    }
}

.mc-dropdown__trigger {
    margin-left: auto;
    padding-left: 16px;
}

.mc-dropdown__panel {
    min-width: 100%; // prevents some animation twitching and test inconsistencies in IE11

    overflow: auto;

    margin-top: -1px;

    border: {
        width: $mc-dropdown-panel-border-width;
        style: solid;
    }

    border-bottom-left-radius: $mc-dropdown-panel-border-radius;
    border-bottom-right-radius: $mc-dropdown-panel-border-radius;

    padding: 4px 0;
}

.mc-dropdown__content {
    height: 100%;

    h1, h2, h3, h4, h5 {
        padding: 8px 16px 4px 16px;
        margin: 0;
    }
}

